# privateDex

./: .gitignore  README.md  config_with_auto_index_example.yaml  debug_api_structure.py  extract_real_precision.py  get_actual_markets.py  get_markets.py  get_real_precision.py  pyproject.toml  requirements.txt  test_auto_index.py  test_sl_tp_api.py  test_stop_loss_precision.py  verify_btc_market.py
config/: config.yaml
src/: __init__.py  main.py  models.py
src/config/: config_manager.py
src/core/: hedge_trading_engine.py  lighter_client_factory.py
src/services/: account_manager.py  order_manager.py  risk_manager.py  websocket_manager.py
src/strategies/: balanced_hedge_strategy.py
src/utils/: logger.py
src/web/: web_server.py
